fix lab 0-3